updated content for smoother mobile use

--- a/index.html
+++ b/index.html
@@ -8,10 +8,11 @@
     <header>
         <nav>
             <ul>
+                <li class="logo mobile"><a href="index.html">Small Logo</a></li>
                 <li><a href="index.html"><strong>Home</strong></a></li>
                 <li><a href="pages/locations.html"><strong>Locations</strong></a></li>
                 <li class="mobile"><a href="pages/contact.html"><strong>Contact</strong></a></li>
-                <li class="logo"><a href="index.html">Brand Logo</a></li>
+                <li class="logo desktop"><a href="index.html">Brand Logo</a></li>
                 <li class="desktop"><a href="pages/contact.html"><strong>Contact</strong></a></li>
             </ul>
         </nav>
@@ -31,8 +32,8 @@
         </figure>
     </section>
 
-
     <footer>footer</footer>
-    
+
+    <script src="scripts/main.js"></script>
 </body>
 </html>
